--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- wrapper -->
     <div class="wrapper">
       <main class="main">
-        <section>
+        <section class="clearfix">
           <a href="#" class="hot-topic">
             <img src="images/hot-topic.jpg" alt="コーディング画面" />
             <div class="content">
@@ -45,7 +45,7 @@
           </a>
         </section>
         <section class="news">
-          <h2 class="heading">NEWS</h2>
+          <h2 class="heading clearfix">NEWS</h2>
           <ul class="scroll-list">
             <li class="scroll-item">
               <a href="#">
@@ -150,6 +150,7 @@
           </div>
         </section>
       </main>
+
       <div class="sideMenu">
         <ol class="ranking">
           <li class="ranking-item">
@@ -160,8 +161,10 @@
                 alt="イメージのランキング"
               />
               <span class="order"></span>
-              <p class="text">ウェブブラウザのシェア動向をチェックしよう
-              チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ</p>
+              <p class="text">
+                ウェブブラウザのシェア動向をチェックしよう
+                チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ
+              </p>
             </a>
           </li>
           <li class="ranking-item">
@@ -172,8 +175,10 @@
                 alt="イメージのランキング"
               />
               <span class="order"></span>
-              <p class="text">ウェブブラウザのシェア動向をチェックしよう
-              チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ</p>
+              <p class="text">
+                ウェブブラウザのシェア動向をチェックしよう
+                チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ
+              </p>
             </a>
           </li>
           <li class="ranking-item">
@@ -184,8 +189,10 @@
                 alt="イメージのランキング"
               />
               <span class="order"></span>
-              <p class="text">ウェブブラウザのシェア動向をチェックしよう
-              チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ</p>
+              <p class="text">
+                ウェブブラウザのシェア動向をチェックしよう
+                チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ
+              </p>
             </a>
           </li>
           <li class="ranking-item">
@@ -196,8 +203,10 @@
                 alt="イメージのランキング"
               />
               <span class="order"></span>
-              <p class="text">ウェブブラウザのシェア動向をチェックしよう
-              チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ</p>
+              <p class="text">
+                ウェブブラウザのシェア動向をチェックしよう
+                チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ
+              </p>
             </a>
           </li>
           <li class="ranking-item">
@@ -208,8 +217,10 @@
                 alt="イメージのランキング"
               />
               <span class="order"></span>
-              <p class="text">ウェブブラウザのシェア動向をチェックしよう
-              チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ</p>
+              <p class="text">
+                ウェブブラウザのシェア動向をチェックしよう
+                チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ
+              </p>
             </a>
           </li>
           <li class="ranking-item">
@@ -220,8 +231,10 @@
                 alt="イメージのランキング"
               />
               <span class="order"></span>
-              <p class="text">ウェブブラウザのシェア動向をチェックしよう
-              チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ</p>
+              <p class="text">
+                ウェブブラウザのシェア動向をチェックしよう
+                チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ
+              </p>
             </a>
           </li>
           <li class="ranking-item">
@@ -232,8 +245,10 @@
                 alt="イメージのランキング"
               />
               <span class="order"></span>
-              <p class="text">ウェブブラウザのシェア動向をチェックしよう
-              チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ</p>
+              <p class="text">
+                ウェブブラウザのシェア動向をチェックしよう
+                チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ
+              </p>
             </a>
           </li>
           <li class="ranking-item">
@@ -244,15 +259,73 @@
                 alt="イメージのランキング"
               />
               <span class="order"></span>
-              <p class="text">ウェブブラウザのシェア動向をチェックしよう
-              チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ</p>
+              <p class="text">
+                ウェブブラウザのシェア動向をチェックしよう
+                チェ動向をチェックしよェブブラウザのシェア動向をチェックしよ
+              </p>
             </a>
           </li>
         </ol>
+        <h2 class="heading">DOCUMENT</h2>
+        <ul class="documents">
+          <li>
+            <h3 class="title">HTML5</h3>
+            <ul>
+              <li><a href="">追加され要素</a></li>
+              <li><a href="">追加され要素</a></li>
+              <li><a href="">追加され要素</a></li>
+              <li><a href="">追加され要素</a></li>
+            </ul>
+          </li>
+          <li>
+            <h3 class="title">CSS</h3>
+            <ul>
+              <li><a href="">追加され要素</a></li>
+              <li><a href="">追加され要素</a></li>
+              <li><a href="">追加され要素</a></li>
+              <li><a href="">追加され要素</a></li>
+            </ul>
+          </li>
+          <li>
+            <h3 class="title">JavaScript</h3>
+            <ul>
+              <li><a href="">追加され要素</a></li>
+              <li><a href="">追加され要素</a></li>
+              <li><a href="">追加され要素</a></li>
+              <li><a href="">追加され要素</a></li>
+            </ul>
+          </li>
+          <li>
+            <h3 class="title">sass, less</h3>
+            <p>只今準備中</p>
+          </li>
+          <li>
+            <h3 class="title">sass, less</h3>
+            <p>只今準備中</p>
+          </li>
+        </ul>
+        <form action="" class="search-box">
+          <input class="search-input" type="text" placeholder="SEARCH" />
+          <input class="search-button" type="submit" value="検索" />
+          <p class="text">サイト内の文章を検索できます。</p>
+        </form>
       </div>
     </div>
 
     <!-- footer -->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <ul class="horizontal-item">
+        <a href="ABOUT ME"></a>
+      </ul>
+      <ul class="horizontal-item">
+        <a href="SITE MAP"></a>
+      </ul>
+      <ul class="horizontal-item">
+        <a href="SNS"></a>
+      </ul>
+      <ul class="horizontal-item">
+        <a href="CONTACT"></a>
+      </ul>
+    </footer>
   </body>
 </html>
